--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -49,44 +49,6 @@ frontend k8s_api_frontend
 backend k8s_api_backend
     mode tcp
     balance source
-    server      ocp-bootstrap 192.168.22.200:6443 check
-    server      ocp-cp-1 192.168.22.201:6443 check
-    server      ocp-cp-2 192.168.22.202:6443 check
-    server      ocp-cp-3 192.168.22.203:6443 check
-
-# OCP Machine Config Server
-frontend ocp_machine_config_server_frontend
-    mode tcp
-    bind :22623
-    default_backend ocp_machine_config_server_backend
-
-backend ocp_machine_config_server_backend
-    mode tcp
-    balance source
-    server      ocp-bootstrap 192.168.22.200:22623 check
-    server      ocp-cp-1 192.168.22.201:22623 check
-    server      ocp-cp-2 192.168.22.202:22623 check
-    server      ocp-cp-3 192.168.22.203:22623 check
-
-# OCP Ingress - layer 4 tcp mode for each. Ingress Controller will handle layer 7.
-frontend ocp_http_ingress_frontend
-    bind :80
-    default_backend ocp_http_ingress_backend
-    mode tcp
-
-backend ocp_http_ingress_backend
-    balance source
-    mode tcp
-    server      ocp-w-1 192.168.22.211:80 check
-    server      ocp-w-2 192.168.22.212:80 check
-
-frontend ocp_https_ingress_frontend
-    bind *:443
-    default_backend ocp_https_ingress_backend
-    mode tcp
-
-backend ocp_https_ingress_backend
-    mode tcp
-    balance source
-    server      ocp-w-1 192.168.22.211:443 check
-    server      ocp-w-2 192.168.22.212:443 check
+    server      rke-cp-1 192.168.10.201:6443 check
+    server      rke-cp-2 192.168.10.202:6443 check
+    server      rke-cp-3 192.168.10.203:6443 check
